--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ li {
   text-decoration: none;
 }
 
-.link-title:before{
+.link-title:before {
   left: 0;
   bottom: 0;
   width: 100%;
@@ -76,27 +76,12 @@ li {
   transform: translateX(0);
 }
 
-.link-title:before, a:after{
-  content: '';
+.link-title:before,
+a:after {
+  content: "";
   position: absolute;
-  transition: transform .5s ease;
+  transition: transform 0.5s ease;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .sous-link-navbar {
   display: flex;
@@ -107,7 +92,7 @@ li {
   padding: 10px 20px;
   border-radius: 5px;
   margin: 10px;
-  background-image: var(--gradient-color); 
+  background-image: var(--gradient-color);
   background-image: var(--gradient-color);
   background-position: 50% 100%;
   background-size: 0% 2px;
@@ -125,9 +110,9 @@ li {
   margin-top: 3px;
   fill: var(--color-light);
 }
-    
-  /* MAIN BACKGROUND */
-  
+
+/* MAIN BACKGROUND */
+
 /* MAIN BACKGROUND */
 
 .main-background {
@@ -136,10 +121,9 @@ li {
   padding: 350px 0px;
 }
 
-.img-separator{
+.img-separator {
   margin-bottom: -360px;
 }
-
 
 .main-text {
   color: var(--color-light);
