--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -50,6 +50,7 @@ li {
   color: var(--color-light);
   display: flex;
   float: right;
+  margin-top: 3px;
 }
 
 .link-title {
@@ -106,10 +107,10 @@ a:after {
 }
 
 .logo {
-  width: 70px;
-  margin-top: 3px;
+  width: 40px;
   fill: var(--color-light);
 }
+
 
 /* MAIN BACKGROUND */
 
@@ -136,4 +137,20 @@ a:after {
 .main-text-weight {
   -webkit-text-stroke: 1.5px var(--color-light);
   color: transparent;
+}
+
+
+
+
+
+
+
+
+
+.box-footer{
+  background: var(--gradient-blue);
+  padding: 150px 0px;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
