--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -56,6 +56,7 @@ li {
   color: var(--color-light);
   display: flex;
   float: right;
+  margin-top: 3px;
 }
 
 .link-title {
@@ -127,10 +128,10 @@ li {
 }
 
 .logo {
-  width: 70px;
-  margin-top: 3px;
+  width: 40px;
   fill: var(--color-light);
 }
+
 
 
 
@@ -258,4 +259,18 @@ li {
 
 .email {
   margin-top: 20px;
+}
+
+
+
+
+
+
+
+.box-footer{
+  background: var(--gradient-blue);
+  padding: 150px 0px;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
