--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -50,6 +50,7 @@ li {
   color: var(--color-light);
   display: flex;
   float: right;
+  margin-top: 3px;
 }
 
 .link-title {
@@ -106,10 +107,10 @@ a:after {
 }
 
 .logo {
-  width: 70px;
-  margin-top: 3px;
+  width: 40px;
   fill: var(--color-light);
 }
+
 
 /* MAIN BACKGROUND */
 
@@ -433,4 +434,18 @@ a:after {
   color: #fff;
   background-color: #000;
   transition: 0.5s;
+}
+
+
+
+
+
+
+
+.box-footer{
+  background: var(--gradient-blue);
+  padding: 150px 0px;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
