--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -19,7 +19,7 @@ li {
   --color-light: #fff;
   --color-dark: #000;
   --bg-color-switch: #0d1117;
-  --gradient-blue: linear-gradient(151deg, #0b2850 0, #040c21 36%);
+  --gradient-blue: linear-gradient(to right, #8a2387, #e94057, #f27121);
   --color-blue: #0068aa;
 }
 /* NAVBAR */
@@ -143,6 +143,8 @@ a:after {
 
 /* FLEX BOX */
 
+
+
 .list-inline .gallery-top-text {
   display: flex;
   justify-content: space-between;
@@ -158,6 +160,8 @@ a:after {
   align-items: flex-start;
   margin: 50px 0px;
 }
+
+
 
 .box {
   width: 350px;
@@ -220,10 +224,11 @@ a:after {
 .title-noprojects {
   font-size: 45px;
   font-weight: 700;
-  text-align: center;
-  margin-top: 50px;
-  color: var(--color-dark-switch);
+  text-align: left;
+  margin-top: 0px;
+  color: var(--color-dark);
 }
+
 
 .box-noprojects {
   padding: 290px 0px;
@@ -281,7 +286,6 @@ a:after {
   display: block;
   margin: 0 auto;
   max-width: 1200px;
-  height: 800px;
 }
 
 .gallery_filter_tab {
@@ -426,7 +430,7 @@ a:after {
   color: #000;
   text-transform: uppercase;
   text-align: center;
-  margin-top: 270px;
+  margin-top: 70px;
 }
 
 .button-access-project:hover {
@@ -437,15 +441,28 @@ a:after {
 }
 
 
-
+.title-project-box{
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  margin-top:120px;
+  color: var(--color-dark-switch);
+}
 
 
 
 
 .box-footer{
-  background: var(--gradient-blue);
-  padding: 150px 0px;
+  background: var(--color-light);
+  padding: 70px 0px;
   bottom: 0;
   left: 0;
   text-align: center;
+}
+
+.title-copyright{
+  color: var(--color-dark);
+  font-size: 18px;
+  text-align: center;
+  font-weight: 500;
 }
