--- a/assets/css/exercices&projets.css
+++ b/assets/css/exercices&projets.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -16,26 +16,25 @@ li {
 }
 
 :root {
-  --color-light: #fff;
+  --color-white: #fff;
   --color-dark: #000;
   --bg-color-switch: #0d1117;
   --gradient-blue: linear-gradient(to right, #8a2387, #e94057, #f27121);
   --color-blue: #0068aa;
 }
 /* NAVBAR */
-
 .navbar {
   box-shadow: none;
   background-color: transparent;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
-  padding: 22px 50px;
   height: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   transition: 0.5s;
+  background-color: #000000;
 }
 
 .box-navbar {
@@ -43,19 +42,21 @@ li {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1100px;
+  padding: 18px 0px;
 }
 
 .link-navbar {
-  color: var(--color-light);
+  color: var(--color-white);
   display: flex;
   float: right;
   margin-top: 3px;
+  font-size: 14px;
 }
 
 .link-title {
   display: flex;
-  font-size: 18px;
+  font-size: 17px;
   cursor: pointer;
   padding: 10px 0px;
   margin: 0px 30px;
@@ -68,10 +69,10 @@ li {
 .link-title:before {
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 102%;
   height: 1px;
   background-color: #ffffff;
-  transform: translateX(-100%);
+  transform: translateX(-102%);
 }
 .link-title:hover:before {
   transform: translateX(0);
@@ -93,8 +94,7 @@ a:after {
   padding: 10px 20px;
   border-radius: 5px;
   margin: 10px;
-  background-image: var(--gradient-color);
-  background-image: var(--gradient-color);
+  background-image: #fff;
   background-position: 50% 100%;
   background-size: 0% 2px;
   background-repeat: no-repeat;
@@ -107,168 +107,41 @@ a:after {
 }
 
 .logo {
-  width: 40px;
-  fill: var(--color-light);
+  width: 35px;
+  fill: var(--color-white);
 }
-
 
 /* MAIN BACKGROUND */
 
-.main-background {
-  background: var(--gradient-blue);
-  width: 100%;
-  padding: 350px 0px;
+.box-max1100px {
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-.img-separator {
-  margin-bottom: -360px;
+.background-color {
+  background-image: url("/assets/img/back-port-exo.png");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.main-background {
+  padding: 150px 0px;
+  background-color: transparent;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .main-text {
-  color: var(--color-light);
+  color: var(--color-dark);
   letter-spacing: 0.8px;
   font-weight: 700;
   text-align: center;
-  font-size: 50px;
-  max-width: 900px;
-  display: block;
-  margin: 0 auto;
-}
-
-.main-text-stroke {
-  -webkit-text-stroke: 1.5px var(--color-light);
-  color: transparent;
-  font-size: 80px;
-}
-
-/* FLEX BOX */
-
-
-
-.list-inline .gallery-top-text {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 50px;
-}
-.flexbox {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: stretch;
-  align-items: flex-start;
-  margin: 50px 0px;
-}
-
-
-
-.box {
-  width: 350px;
-  margin: 20px 20px;
-  border-radius: 10px;
-  align-self: auto;
-  padding: 30px 30px;
-  background: var(--gradient-blue);
-}
-
-.number-title {
-  font-size: 72px;
-  -webkit-text-stroke: 3px var(--color-light);
-  font-weight: 600;
-  color: transparent;
-  font-style: italic;
-}
-
-.img-box {
-  width: 150px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 240px;
-  object-fit: contain;
-}
-
-.sous-title-box {
-  padding: 60px 0px;
-  font-size: 35px;
-  font-weight: 600;
-  text-transform: uppercase;
-  text-align: center;
-  color: var(--color-light);
-}
-
-.button-link-box {
-  padding: 10px 30px;
-  display: block;
-  margin: auto;
-  background: transparent;
-  text-align: center;
-  margin-top: 10px;
-  cursor: pointer;
-  border-radius: 50px;
-  color: var(--color-light);
-  font-weight: 500;
-  font-size: 18px;
-  border: 1px solid rgb(255, 255, 255);
-  max-width: 250px;
-}
-
-.button-link-box:hover {
-  transition: 0.5s;
-  color: var(--color-light);
-  border: 1px solid var(--color-light);
-  background: rgb(255, 255, 255, 0.3);
-}
-
-.title-noprojects {
-  font-size: 45px;
-  font-weight: 700;
-  text-align: left;
-  margin-top: 0px;
-  color: var(--color-dark);
-}
-
-
-.box-noprojects {
-  padding: 290px 0px;
-}
-
-.button-returntohome {
-  background-color: var(--color-dark-switch);
-  color: var(--color-light-switch);
-  display: block;
-  margin: 0 auto;
-  width: 390px;
-  text-align: center;
-  padding: 20px 60px;
-  border-radius: 50px;
-  font-weight: 600;
-  margin-top: 50px;
-}
-
-.toggleButton {
-  width: 150px;
-  padding: 10px 10px;
-  margin: 40px 0px 0px 40px;
+  font-size: 40px;
+  padding: 50px 0px;
   color: #fff;
-  background-color: var(--color-blue);
-  border: 2px var(--color-blue);
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-}
 
-.toggleButton:hover {
-  background-color: var(--color-blue);
-}
-
-.box-filter-projects {
-  display: flex;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .row {
@@ -297,11 +170,7 @@ a:after {
 .list-inline {
   border-radius: 10px;
   display: flex;
-  box-shadow: 0 2.76726px 2.21381px rgb(0 0 0 / 7%),
-    0 6.6501px 5.32008px rgb(0 0 0 / 4%), 0 12.5216px 10.0172px rgb(0 0 0 / 3%),
-    0 22.3363px 17.869px rgb(0 0 0 / 3%), 0 41.7776px 33.4221px rgb(0 0 0 / 2%),
-    0 100px 80px rgb(0 0 0 / 2%);
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -348,11 +217,6 @@ a:after {
     border-radius: 10px;
     display: flex;
     margin: 0px 20px;
-    box-shadow: 0 2.76726px 2.21381px rgb(0 0 0 / 7%),
-      0 6.6501px 5.32008px rgb(0 0 0 / 4%),
-      0 12.5216px 10.0172px rgb(0 0 0 / 3%),
-      0 22.3363px 17.869px rgb(0 0 0 / 3%),
-      0 41.7776px 33.4221px rgb(0 0 0 / 2%), 0 100px 80px rgb(0 0 0 / 2%);
     background-color: #f6f6f6;
     flex-direction: column;
     flex-wrap: wrap;
@@ -418,7 +282,6 @@ a:after {
   border: 1px solid #000;
   color: rgb(0, 0, 0);
   cursor: pointer;
-  border-radius: 50px;
   padding: 15px 20px;
   font-weight: 500;
   display: block;
@@ -426,11 +289,11 @@ a:after {
   margin-left: auto;
   font-size: 15px;
   padding: 15px 35px;
-  border-radius: 10px;
+  border-radius: 50px;
   color: #000;
   text-transform: uppercase;
   text-align: center;
-  margin-top: 70px;
+  margin-top: 120px;
 }
 
 .button-access-project:hover {
@@ -440,19 +303,15 @@ a:after {
   transition: 0.5s;
 }
 
-
-.title-project-box{
-  font-size: 35px;
+.title-project-box {
+  font-size: 29px;
   font-weight: 600;
   text-align: center;
-  margin-top:120px;
+  margin-top: 120px;
   color: var(--color-dark-switch);
 }
 
-
-
-
-.box-footer{
+.box-footer {
   background: var(--color-light);
   padding: 70px 0px;
   bottom: 0;
@@ -460,9 +319,37 @@ a:after {
   text-align: center;
 }
 
-.title-copyright{
+.title-copyright {
   color: var(--color-dark);
   font-size: 18px;
   text-align: center;
   font-weight: 500;
+}
+
+
+
+.menu-tree{
+  display: flex;
+  padding: 50px 0px;
+}
+
+.separator-menu-tree{
+margin: 0px 10px;
+}
+
+.link-menu-tree{
+cursor: pointer;
+border-bottom: 1px solid transparent ;
+font-weight: 400;
+color: rgb(148, 148, 148);
+text-transform: uppercase;
+}
+.link-menu-tree:hover{
+color: #000;
+transition: 0.5s;
+
+  }
+
+.link-menu-tree-here{
+color: #000 ;
 }
