--- a/assets/css/projets.css
+++ b/assets/css/projets.css
@@ -368,3 +368,48 @@ transition: 0.5s;
 .link-menu-tree-here{
 color: #000 ;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.main-img-project{
+  background-color: var(--white);
+  font-size: var(--font-size-18);
+  font-weight: 700;
+  color: var(--white);
+  border-radius: 20px;
+  max-width: 1200px;
+  margin-bottom: 100px;
+}
+
+.img-project{
+  width: 100%;
+  height: 380px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.button-link-extern-project{
+  background-color: #000000;
+  color: #fff;
+  border-radius: 10px;
+  padding: 30px 60px;
+  font-size: 20px;
+cursor: pointer;
+}
