--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ a:after {
   padding: 0px 50px;
 }
 .background-color{
-  background-image: url("/assets/img/back-port-exo.png");
+  background-image: url("../img/back-port-exo.png");
   background-size: cover;
   width: 100%;
   height: 100%;
