--- a/assets/css/projets.css
+++ b/assets/css/projets.css
@@ -119,7 +119,7 @@ a:after {
 }
 
 .background-color {
-  background-image: url("/assets/img/back-port-exo.png");
+  background-image: url("../img/back-port-exo.png");
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -339,9 +339,6 @@ a:after {
   text-align: center;
   font-weight: 500;
 }
-
-
-
 
 .menu-tree{
   display: flex;
